api-proxy/envoy.local.yaml
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 80
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: api
                access_log:
                  - name: envoy.access_loggers.file
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                      path: "/dev/stdout"
                http_filters:
                  - name: envoy.filters.http.jwt_authn
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
                      providers:
                        keycloak-jwt:
                          issuer: http://localhost:8080/realms/demo-api
                          remote_jwks:
                            http_uri:
                              uri: "http://keycloak:8080/realms/demo-api/protocol/openid-connect/certs"
                              cluster: keycloak_jwks_service
                              timeout: 10s
                            cache_duration:
                              seconds: 10
                          forward: true
                          forward_payload_header: "X-Verified-Jwt-Payload"
                      rules:
                        - match:
                            prefix: /user
                          requires:
                            provider_name: keycloak-jwt
                      bypass_cors_preflight: true
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                      start_child_span: true
  clusters:
    - name: api
      connect_timeout: 60s
      type: STRICT_DNS
      health_checks:
        - timeout: 1s
          interval: 1s
          unhealthy_threshold: 2
          healthy_threshold: 5
          http_health_check:
            path: "/"
      load_assignment:
        cluster_name: api
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: api
                      port_value: 8082
    - name: keycloak_jwks_service
      connect_timeout: 5s
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: keycloak
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: keycloak
                      port_value: 8080
